fix website background on small resolutions

--- a/website/styles/globals.scss
+++ b/website/styles/globals.scss
@@ -14,6 +14,7 @@ html {
 }
 
 body {
+  position: relative;
   padding: 0;
   margin: 0;
 
@@ -21,7 +22,21 @@ body {
 
   color: $color-light;
   background-color: $color-dark;
-  background-image: $gradient-purple;
+  background-repeat: no-repeat;
+
+  &::after {
+    content: '';
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    width: 100%;
+    height: 100%;
+
+    background-image: $gradient-purple;
+  }
 }
 
 a {
